deployments/recipe-service/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-server
  labels:
    app: cookbook-server
spec:
  replicas: 1
  strategy:
    type: Recreate # 1 replika + migracje w init -> unikamy 2 podów naraz
  selector:
    matchLabels:
      app: cookbook-server
  template:
    metadata:
      labels:
        app: cookbook-server
    spec:
      containers:
        - name: server
          image: cookbook-server # podmieniany przez images: w kustomization.yaml
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
