deployments/recipe-service/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-web
  labels:
    app: cookbook-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cookbook-web
  template:
    metadata:
      labels:
        app: cookbook-web
    spec:
      containers:
        - name: web
          image: cookbook-web # podmieniany przez images: w kustomization.yaml
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      volumes:
        - name: web-config
          configMap:
            name: cookbook-web-config
