deployments/recipe-service/recipeservice-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookbook-server # musi zgadzać się z backendem w k8s/web/ingress.yaml
spec:
  selector:
    app: cookbook-server
  ports:
    - port: 3001
      targetPort: 3001
