deployments/recipe-service/recipeservice-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookbook-web
spec:
  selector:
    app: cookbook-web
  ports:
    - port: 80
      targetPort: 80
